--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -10,7 +10,7 @@
       <!-- Main Content -->
       <div id="content">
   
-        <!-- Topbar -->
+        <!-- Header -->
         <app-header></app-header>        
         <!-- End of Topbar -->
   
