--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -34,6 +34,17 @@
     <hr class="sidebar-divider">
 
     <li class="nav-item active">
+        <a class="nav-link" href="#" routerLink="ProjectPayment">
+            <span>
+                Project Payment
+            </span>
+        </a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <li class="nav-item active">
         <a class="nav-link" href="#" routerLink="Employee">
             <span>
                 Employee
@@ -51,7 +62,16 @@
             </span>
         </a>
     </li>
+    <!-- Divider -->
+    <hr class="sidebar-divider">
 
+    <li class="nav-item active">
+        <a class="nav-link" href="#" routerLink="EmployeePayment">
+            <span>
+                Employee Payment
+            </span>
+        </a>
+    </li>
     <!-- Divider -->
     <hr class="sidebar-divider">
 
