--- a/src/app/admin/pages/employee-project/employee-project.component.html
+++ b/src/app/admin/pages/employee-project/employee-project.component.html
@@ -1,1 +1,8 @@
-<p>employee-project works!</p>
+<!--Page Title-->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">
+        Employee Project
+    </h1>
+</div>
+
+<!-- Content Row -->
