--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -1,1 +1,8 @@
-<p>project-payment works!</p>
+<!--Page Title-->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">
+        Project Payment
+    </h1>
+</div>
+
+<!-- Content Row -->
