--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -9,45 +9,43 @@
 <div class="card shadow mb-4">
     <div *ngIf="isShown">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Employer List</h6>
-
+            <h5 class="m-0 font-weight-bold text-primary">Employer List</h5>
         </div>
 
-        <div class="col-xl-12 col-md-12 mb-12">
-            <div class="card-body">
-                <div class="row" style="margin-bottom: 10px;">
-                    <div class="col-lg-12">
-                        <button class="btn btn-primary btn-sm" (click)="addEmployer()" style="float:right">Add
-                            New</button>
-                    </div>
+        <div class="card-body">
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-lg-12">
+                    <button class="btn btn-primary btn-sm" (click)="addEmployer()" style="float:right">Add
+                        New</button>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <table class="table table-bordered dataTable">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">StartDate</th>
-                                    <th scope="col">Designation</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let emp of employer">
-                                    <td>{{emp.name}}</td>
-                                    <td>{{emp.startDate}}</td>
-                                    <td>{{emp.designation}}</td>
-                                    <td><a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Edit">
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <table class="table table-bordered dataTable">
+                        <thead>
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Start Date</th>
+                                <th scope="col">Designation</th>
+                                <th style="text-align: center;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let emp of employer">
+                                <td>{{emp.name}}</td>
+                                <td>{{emp.startDate}}</td>
+                                <td>{{emp.designation}}</td>
+                                <td style="text-align: center;">
+                                    <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Edit">
                                         <fa-icon [icon]="faEdit"></fa-icon>
-                                      </a>
-                                      <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Delete">
+                                    </a>
+                                    <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Delete">
                                         <fa-icon [icon]="faDelete"></fa-icon>
-                                      </a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -56,7 +54,7 @@
     <div *ngIf="!isShown">
         <!-- Card Header - Dropdown -->
         <div class="card-header ">
-            <h6 class="m-0 font-weight-bold text-primary">Add Employer</h6>
+            <h5 class="m-0 font-weight-bold text-primary">Add Employer</h5>
 
         </div>
         <!-- Card Body -->
@@ -64,22 +62,20 @@
             <form class="form-horizontal">
                 <div class="row">
                     <div class="form-group col-lg-6">
-                        <label for="txtTitle">First Name</label>
-                        <input class="form-control" type="text" id="txtFname" placeholder="FirstName"
-                            Name="firstname">
+                        <label for="firstName">First Name</label>
+                        <input class="form-control" type="text" id="firstName" placeholder="FirstName" >
                     </div>
                     <div class="form-group col-lg-6">
-                        <label for="txtDescription">Last Name</label>
-                        <input class="form-control" type="text"  id="txtLname" placeholder="LastName"
-                            Name="lastname">
+                        <label for="lastNname">Last Name</label>
+                        <input class="form-control" type="text" id="lastNname" placeholder="LastName" >
                     </div>
                 </div>
 
 
                 <div class="row">
                     <div class="form-group col-lg-6">
-                        <label for="txtDescription">Designation</label>
-                        <input class="form-control" type="text"  id="txtDescription" placeholder="Designation"
+                        <label for="description">Designation</label>
+                        <input class="form-control" type="text" id="description" placeholder="Designation"
                             Name="designation">
                     </div>
                     <div class="form-group col-lg-6">
@@ -88,14 +84,13 @@
                             <option value="none" selected>--Select Gender--</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
-                            <option value="other">other</option>
                         </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="form-group col-lg-6">
-                        <label for="ngbDatepicker">Start Date :</label>
+                        <label for="ngbDatepicker">Start Date </label>
                         <div class="input-group">
                             <input class="form-control" placeholder="MM/DD/YYYY" name="dp" ngbDatepicker
                                 #d="ngbDatepicker">
@@ -104,7 +99,7 @@
                         </div>
                     </div>
                     <div class="form-group col-lg-6">
-                        <label for="ngbDatepicker">End Date :</label>
+                        <label for="ngbDatepicker">End Date </label>
                         <div class="input-group">
                             <input class="form-control" placeholder="MM/DD/YYYY" name="dp" ngbDatepicker
                                 #p="ngbDatepicker">
