--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -6,3 +6,167 @@
 </div>
 
 <!-- Content Row -->
+
+<div class="card shadow mb-4">
+    <div *ngIf="isShown">
+        <div class="card-header py-3">
+            <h5 class="m-0 font-weight-bold text-primary">Employee Payment List</h5>
+        </div>
+
+        <div class="card-body">
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        <select class="form-select " ngbDropdown="selectedMonth">
+                                            <option value="none" selected>--Select Month--</option>
+                                            <option *ngFor="let month of months" [value]="month">{{ month }}
+                                            </option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        <select class="form-select " ngbDropdown="selectedYear">
+                                            <option value="none" selected>--Select Year--</option>
+                                            <option *ngFor="let year of years" [value]="year">{{ year }}</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 mb-4">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        <button class="btn btn-primary btn-sm" (click)="addEmployer()"
+                                            style="float:right">Add
+                                            Payment</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <table class="table table-bordered dataTable">
+                        <thead>
+                            <tr>
+                                <th scope="col">Employee Name</th>
+                                <th scope="col">Amount</th>
+                                <th scope="col">Month/Year</th>
+                                <th scope="col">Payment Date</th>
+                                <th style="text-align: center;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let emp of employer">
+                                <td>{{emp.employeename}}</td>
+                                <td>{{emp.amount}}</td>
+                                <td>{{emp.month}}</td>
+                                <td>{{emp.paymentdate}}</td>
+                                <td style="text-align: center;">
+                                    <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Edit">
+                                        <fa-icon [icon]="faEdit"></fa-icon>
+                                    </a>
+                                    <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Delete">
+                                        <fa-icon [icon]="faDelete"></fa-icon>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div *ngIf="!isShown">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header ">
+            <h5 class="m-0 font-weight-bold text-primary">Add Employer</h5>
+
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
+            <form class="form-horizontal">
+                <div class="row">
+                    <div class="form-group col-lg-6">
+                        <label for="employee">Employee</label>
+                        <select class="form-select col-lg-12">
+                            <option value="none" selected>--Select Employee--</option>
+                            <option value="1">Subhash Rawat</option>
+                            <option value="2">Tajwar Rawat</option>
+                            <option value="3">Prakash Rawat</option>
+                            <option value="4">Vikash Rawat</option>
+                            <option value="5">Deepak Dhiman</option>
+                            <option value="6">Manmohon Singh</option>
+                            <option value="7">Sudhir Rawat</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <label for="amount">Amount</label>
+                        <input class="form-control" type="text" id="amount" placeholder="Amount">
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="form-group col-lg-6">
+                        <label for="month">Month</label>
+                        <select class="form-select " ngbDropdown="selectedMonth">
+                            <option value="none" selected>--Select Month--</option>
+                            <option *ngFor="let month of months" [value]="month">{{ month }}</option>
+                        </select>
+
+                    </div>
+
+                    <div class="form-group col-lg-6">
+                        <label for="years">Year</label>
+                        <select class="form-select " ngbDropdown="selectedYear">
+                            <option value="none" selected>--Select Year--</option>
+                            <option *ngFor="let year of years" [value]="year">{{ year }}</option>
+                        </select>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="form-group col-lg-6">
+                        <label for="ngbDatepicker">Payment Date</label>
+                        <div class="input-group">
+                            <input class="form-control" placeholder="MM/DD/YYYY" name="dp" ngbDatepicker
+                                #d="ngbDatepicker">
+                            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
+                                type="button"></button>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="row">
+                    <div class="form-group col-lg-12">
+                        <input type="button" *ngIf="isAddNew" class="btn btn-success" value="Save"
+                            style="margin-right: 10px; width:100px;" />
+                        <input type="button" *ngIf="!isAddNew" class="btn btn-primary" value="Update"
+                            style="margin-right: 10px; width:100px;" />
+                        <input type="button" class="btn btn-outline-primary" value="Cancel" style="width:100px;"
+                            (click)="isShown = true" />
+                    </div>
+                </div>
+
+
+            </form>
+        </div>
+    </div>
+</div>
