--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -70,10 +70,10 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let emp of employer">
-                                <td>{{emp.employeename}}</td>
+                                <td>{{emp.employeeName}}</td>
                                 <td>{{emp.amount}}</td>
                                 <td>{{emp.month}}</td>
-                                <td>{{emp.paymentdate}}</td>
+                                <td>{{emp.paymentDate}}</td>
                                 <td style="text-align: center;">
                                     <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Edit">
                                         <fa-icon [icon]="faEdit"></fa-icon>
