--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -63,11 +63,11 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="firstName">First Name</label>
-                        <input class="form-control" type="text" id="firstName" placeholder="FirstName" >
+                        <input class="form-control" type="text" id="firstName" placeholder="FirstName" autocomplete="off" >
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="lastNname">Last Name</label>
-                        <input class="form-control" type="text" id="lastNname" placeholder="LastName" >
+                        <input class="form-control" type="text" id="lastNname" placeholder="LastName" autocomplete="off" >
                     </div>
                 </div>
 
@@ -75,16 +75,15 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="description">Designation</label>
-                        <input class="form-control" type="text" id="description" placeholder="Designation"
-                            Name="designation">
-                    </div>
+                            <select name="city" class="form-select col-lg-12" (change)="onChange($event.target)">
+                                <option *ngFor="let designation of designations"  [value]="designation.id">{{designation.name}}</option>
+                                </select>
+                        </div>
                     <div class="form-group col-lg-6">
                         <label for="gender">Gender</label>
-                        <select class="form-select col-lg-12">
-                            <option value="none" selected>--Select Gender--</option>
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                        </select>
+                        <select name="city" class="form-select col-lg-12" (change)="onChange($event.target)">
+                            <option *ngFor="let gender of genders"  [value]="gender.id">{{gender.name}}</option>
+                            </select>
                     </div>
                 </div>
 
@@ -92,8 +91,8 @@
                     <div class="form-group col-lg-6">
                         <label for="ngbDatepicker">Start Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="MM/DD/YYYY" name="dp" ngbDatepicker
-                                #d="ngbDatepicker">
+                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
+                                #d="ngbDatepicker" mask="00/00/0000" autocomplete="off" >
                             <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
                                 type="button"></button>
                         </div>
@@ -101,14 +100,20 @@
                     <div class="form-group col-lg-6">
                         <label for="ngbDatepicker">End Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="MM/DD/YYYY" name="dp" ngbDatepicker
-                                #p="ngbDatepicker">
+                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
+                                #p="ngbDatepicker" mask="00/00/0000" autocomplete="off" >
                             <button class="btn btn-outline-secondary calendar" (click)="p.toggle()"
                                 type="button"></button>
                         </div>
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="form-group col-lg-6">
+                        <label for="description">Mobile</label>
+                        <input class="form-control" type="text" id="mobile" placeholder="Mobile Number" mask="(000) 000 0000" autocomplete="off" >
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="form-group col-lg-12">
