--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -70,15 +70,13 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="projectName">Project Name </label>
-                        <input type="text" class="form-control" id="projectName" placeholder="Project Name">
+                        <input type="text" class="form-control" id="projectName" placeholder="Project Name" autocomplete="off" >
                     </div>
 
                     <div class="form-group col-lg-6">
                         <label for="duration">Duration </label>
-                        <select class="form-select " aria-label="aria-label">
-                            <option selected> Select Duration</option>
-                            <option value="1">One Time</option>
-                            <option value="2">Monthly</option>
+                        <select name="city" class="form-select col-lg-12" (change)="onChange($event.target)">
+                            <option *ngFor="let duration of durations" [value]="duration.id">{{duration.name}}</option>
                         </select>
                     </div>
 
@@ -87,8 +85,8 @@
                     <div class="form-group col-lg-6">
                         <label for="startDate">Start Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="dd-mm-yyyy" name="dp" ngbDatepicker
-                                #d="ngbDatepicker" id="startDate">
+                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
+                                #d="ngbDatepicker" id="startDate" mask="00/00/0000" autocomplete="off" >
                             <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
                                 type="button"></button>
                         </div>
@@ -98,8 +96,8 @@
                     <div class="form-group col-lg-6">
                         <label for="endDate">End Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="dd-mm-yyyy" name="dp" ngbDatepicker
-                                #p="ngbDatepicker" id="endDate">
+                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
+                                #p="ngbDatepicker" id="endDate" mask="00/00/0000" autocomplete="off" >
                             <button class="btn btn-outline-secondary calendar" (click)="p.toggle()"
                                 type="button"></button>
                         </div>
@@ -109,16 +107,13 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="Cost">Cost </label>
-                        <input type="text" class="form-control" id="txtDescription" placeholder="Cost">
+                        <input type="text" class="form-control" id="txtDescription" placeholder="Cost" autocomplete="off" >
                     </div>
 
                     <div class="form-group col-lg-6">
-                        <label for="status">Status :</label>
-                        <select class="form-select " aria-label="aria-label">
-                            <option selected> Select Status</option>
-                            <option value="1">Completed</option>
-                            <option value="2">In Progress</option>
-                            <option value="3">Starting</option>
+                        <label for="status">Status </label>
+                        <select name="city" class="form-select col-lg-12" (change)="onChange($event.target)">
+                            <option *ngFor="let status of status" [value]="status.id">{{status.name}}</option>
                         </select>
                     </div>
                 </div>
