--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -63,11 +63,13 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="firstName">First Name</label>
-                        <input class="form-control" type="text" id="firstName" placeholder="FirstName" autocomplete="off" >
+                        <input class="form-control" type="text" id="firstName" placeholder="FirstName"
+                            autocomplete="off">
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="lastNname">Last Name</label>
-                        <input class="form-control" type="text" id="lastNname" placeholder="LastName" autocomplete="off" >
+                        <input class="form-control" type="text" id="lastNname" placeholder="LastName"
+                            autocomplete="off">
                     </div>
                 </div>
 
@@ -75,15 +77,16 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="description">Designation</label>
-                            <select name="city" class="form-select col-lg-12" (change)="onChange($event.target)">
-                                <option *ngFor="let designation of designations"  [value]="designation.id">{{designation.name}}</option>
-                                </select>
-                        </div>
+                        <select name="description" class="form-select col-lg-12" (change)="onChange($event.target)">
+                            <option *ngFor="let designation of designations" [value]="designation.id">
+                                {{designation.name}}</option>
+                        </select>
+                    </div>
                     <div class="form-group col-lg-6">
                         <label for="gender">Gender</label>
-                        <select name="city" class="form-select col-lg-12" (change)="onChange($event.target)">
-                            <option *ngFor="let gender of genders"  [value]="gender.id">{{gender.name}}</option>
-                            </select>
+                        <select name="gender" class="form-select col-lg-12" (change)="onChange($event.target)">
+                            <option *ngFor="let gender of genders" [value]="gender.id">{{gender.name}}</option>
+                        </select>
                     </div>
                 </div>
 
@@ -92,7 +95,7 @@
                         <label for="ngbDatepicker">Start Date </label>
                         <div class="input-group">
                             <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #d="ngbDatepicker" mask="00/00/0000" autocomplete="off" >
+                                #d="ngbDatepicker" mask="00/00/0000" autocomplete="off">
                             <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
                                 type="button"></button>
                         </div>
@@ -101,7 +104,7 @@
                         <label for="ngbDatepicker">End Date </label>
                         <div class="input-group">
                             <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #p="ngbDatepicker" mask="00/00/0000" autocomplete="off" >
+                                #p="ngbDatepicker" mask="00/00/0000" autocomplete="off">
                             <button class="btn btn-outline-secondary calendar" (click)="p.toggle()"
                                 type="button"></button>
                         </div>
@@ -110,8 +113,9 @@
 
                 <div class="row">
                     <div class="form-group col-lg-6">
-                        <label for="description">Mobile</label>
-                        <input class="form-control" type="text" id="mobile" placeholder="Mobile Number" mask="(000) 000 0000" autocomplete="off" >
+                        <label for="mobile">Mobile</label>
+                        <input class="form-control" type="text" id="mobile" placeholder="Mobile Number"
+                            mask="(000) 000 0000" autocomplete="off">
                     </div>
                 </div>
 
