link and dashboard changes

--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -14,7 +14,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
-        <a class="nav-link" href="#" routerLink="">
+        <a class="nav-link" href="javascript:void(0)" routerLink="">
             <fa-icon [icon]="faDashboard"></fa-icon>
             <span>
                 Dashboard
@@ -27,15 +27,15 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item active">
-        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+        <a class="nav-link" href="javascript:void(0)" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
             aria-controls="collapseTwo">
             <fa-icon [icon]="faProject"></fa-icon>
             <span style="margin-left: 10px;">Project</span>
         </a>
         <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="#" routerLink="Project">Project Details</a>
-                <a class="collapse-item" href="#" routerLink="ProjectPayment">Project Payment</a>
+                <a class="collapse-item" href="javascript:void(0)" routerLink="Project">Project Details</a>
+                <a class="collapse-item" href="javascript:void(0)" routerLink="ProjectPayment">Project Payment</a>
             </div>
         </div>
     </li>
@@ -45,16 +45,16 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item active">
-        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+        <a class="nav-link" href="javascript:void(0)" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
             aria-controls="collapseTwo">
             <fa-icon [icon]="faUser"></fa-icon>
             <span style="margin-left: 10px;">Employee</span>
         </a>
         <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="#" routerLink="Employee">Employee Details</a>
-                <a class="collapse-item" href="#" routerLink="EmployeePayment">Employee Payment</a>
-                <a class="collapse-item" href="#" routerLink="EmployeeProject">Employee Project</a>
+                <a class="collapse-item" href="javascript:void(0)" routerLink="Employee">Employee Details</a>
+                <a class="collapse-item" href="javascript:void(0)" routerLink="EmployeePayment">Employee Payment</a>
+                <a class="collapse-item" href="javascript:void(0)" routerLink="EmployeeProject">Employee Project</a>
             </div>
         </div>
     </li>
@@ -64,7 +64,7 @@
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-        <a class="nav-link" href="#" routerLink="User">
+        <a class="nav-link" href="javascript:void(0)" routerLink="User">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Users</span></a>
     </li>
