--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="javascript:void(0)" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
             aria-controls="collapseTwo">
             <fa-icon [icon]="faProject"></fa-icon>
-            <span style="margin-left: 10px;">Project</span>
+            <span>Project</span>
         </a>
         <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
@@ -47,8 +47,8 @@
     <li class="nav-item active">
         <a class="nav-link" href="javascript:void(0)" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
             aria-controls="collapseTwo">
-            <fa-icon [icon]="faUser"></fa-icon>
-            <span style="margin-left: 10px;">Employee</span>
+            <fa-icon [icon]="faUsers"></fa-icon>
+            <span>Employee</span>
         </a>
         <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
@@ -64,8 +64,8 @@
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)" routerLink="User">
-            <i class="fas fa-fw fa-chart-area"></i>
+        <a class="nav-link" href="javascript:void(0)" routerLink="User">            
+            <fa-icon [icon]="faUser"></fa-icon>
             <span>Users</span></a>
     </li>
 
